# backend/posts/api/impl.go
@@ -3,19 +3,18 @@ package api
 import (
 	"fmt"
 	"net/http"
-	"strconv"
 	"strings"
 
 	"github.com/labstack/echo/v4"
 )
 
 type DatabaseInterface interface {
-	CreatePost(accountId int, body string, tags []string, attachments []Attachment) (*Post, error)
+	CreatePost(accountId string, parentId *string, body string, tags []string, attachments []Attachment) (*Post, error)
 	GetPosts(username *string, tag *string, sort *GetPostsParamsSort, page *int, limit *int) ([]Post, error)
-	GetPostById(postId int) (*Post, error)
-	DeletePostById(postId int) error
-	GetIdByUsername(username string) (*int, error)
-	GetPostCommentsById(postId int) ([]Post, error)
+	GetPostById(postId string) (*Post, error)
+	DeletePostById(postId string) error
+	GetIdByUsername(username string) (*string, error)
+	GetPostCommentsById(postId string) ([]Post, error)
 }
 
 type Server struct {
@@ -35,7 +34,6 @@ func (s *Server) GetPosts(ctx echo.Context, params GetPostsParams) error {
 		return ctx.JSON(http.StatusInternalServerError, fmt.Sprintf("There was an error getting the posts: %v", err))
 	}
 	return ctx.JSON(http.StatusOK, posts)
-
 }
 
 // CreatePost handles the POST /posts request.
@@ -69,7 +67,7 @@ func (s *Server) CreatePost(ctx echo.Context) error {
 	}
 
 	// Create the post
-	post, err := s.db.CreatePost(*id, newPost.Content.Body, tags, attachments)
+	post, err := s.db.CreatePost(*id, newPost.ParentId, newPost.Content.Body, tags, attachments)
 	if err != nil {
 		return ctx.JSON(http.StatusInternalServerError, fmt.Sprintf("error creating post: %v", err))
 	}
@@ -80,13 +78,7 @@ func (s *Server) CreatePost(ctx echo.Context) error {
 // DeletePostById handles the DELETE /posts/{postId} request.
 func (s *Server) DeletePostById(ctx echo.Context, postId string) error {
 	// TODO: auth
-	// try to convert postId to an int
-	id, err := strconv.Atoi(postId)
-	if err != nil {
-		return ctx.JSON(http.StatusBadRequest, "postId in path parameter must be an integer")
-	}
-
-	err = s.db.DeletePostById(id)
+	err := s.db.DeletePostById(postId)
 	if err != nil {
 		ctx.JSON(http.StatusInternalServerError, fmt.Sprintf("error deleting post: %v", err))
 	}
@@ -96,13 +88,7 @@ func (s *Server) DeletePostById(ctx echo.Context, postId string) error {
 
 // GetPostById handles the GET /posts/{postId} request.
 func (s *Server) GetPostById(ctx echo.Context, postId string) error {
-	// try to convert postId to an int
-	id, err := strconv.Atoi(postId)
-	if err != nil {
-		return ctx.JSON(http.StatusBadRequest, "postId in path parameter must be an integer")
-	}
-
-	post, err := s.db.GetPostById(id)
+	post, err := s.db.GetPostById(postId)
 	if err != nil {
 		return ctx.JSON(http.StatusInternalServerError, fmt.Sprintf("error retrieving post: %v", err))
 	}
@@ -115,13 +101,7 @@ func (s *Server) GetPostById(ctx echo.Context, postId string) error {
 }
 
 func (s *Server) GetPostCommentsById(ctx echo.Context, postId string) error {
-	// try to convert postId to an int
-	id, err := strconv.Atoi(postId)
-	if err != nil {
-		return ctx.JSON(http.StatusBadRequest, "postId in path parameter must be an integer")
-	}
-
-	posts, err := s.db.GetPostCommentsById(id)
+	posts, err := s.db.GetPostCommentsById(postId)
 	if err != nil {
 		return ctx.JSON(http.StatusInternalServerError, fmt.Sprintf("error retrieving posts: %s", err))
 	}
